updated README, fixes #2

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 These are some examples using Java fundamental concepts. All the examples are based in the book Core Java, Volume I.
+
+Will use github issue tracker
