some more details #1

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 These are some examples using Java fundamental concepts. All the examples are based in the book Core Java, Volume I.
 
 Will use github issue tracker
+
+And here some more details.
